--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
 <div id="styleModal" class="modal hidden">
   <div class="modal-content">
     <h2>Choisissez un style</h2>
-    <div class="styles-grid">
+    <div class="styles-list">
       <div class="style-card" data-style="moderne">
-        <img src="https://via.placeholder.com/120x80?text=Moderne" alt="Moderne">
+        <img src="images/moderne.jpg" alt="Moderne">
         <p>Moderne</p>
       </div>
       <div class="style-card" data-style="scandinave">
-        <img src="https://via.placeholder.com/120x80?text=Scandinave" alt="Scandinave">
+        <img src="images/scan.jpg" alt="Scandinave">
         <p>Scandinave</p>
       </div>
       <div class="style-card" data-style="minimaliste">
-        <img src="https://via.placeholder.com/120x80?text=Minimaliste" alt="Minimaliste">
+        <img src="images/minimaliste.jpg" alt="Minimaliste">
         <p>Minimaliste</p>
       </div>
       <div class="style-card" data-style="industriel">
-        <img src="https://via.placeholder.com/120x80?text=Industriel" alt="Industriel">
+        <img src="images/industriel.jpg" alt="Industriel">
         <p>Industriel</p>
       </div>
     </div>
@@ -96,51 +96,72 @@
   z-index: 1000;
 }
 
-/* Hide modal */
+/* Cache la modale */
 .hidden { display: none; }
 
-/* Modal box */
+/* Boîte de la modale */
 .modal-content {
   background: white;
   padding: 20px;
   border-radius: 12px;
-  width: 80%;
+  width: 90%;
   max-width: 500px;
   text-align: center;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   animation: fadeIn 0.3s ease;
 }
 
-/* Grid of styles */
-.styles-grid {
+/* Liste verticale des styles */
+/* Container des styles */
+.styles-list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
+  grid-template-columns: 1fr; /* Par défaut : une seule colonne (mobile) */
+  gap: 20px;
   margin: 20px 0;
 }
 
+/* Chaque carte */
 .style-card {
   border: 2px solid #ccc;
-  border-radius: 10px;
+  border-radius: 12px;
   cursor: pointer;
   overflow: hidden;
   transition: transform 0.2s, border-color 0.2s;
+  background: #fff;
 }
 
 .style-card:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   border-color: #6c63ff;
 }
 
 .style-card img {
   width: 100%;
+  height: auto;
   display: block;
 }
 
 .style-card p {
   margin: 10px 0;
   font-weight: bold;
+  font-size: 1.1em;
 }
+
+/* Desktop : grille en 2 colonnes */
+@media (min-width: 768px) {
+  .styles-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* Grand écran : grille en 2 colonnes plus larges */
+@media (min-width: 1200px) {
+  .styles-list {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+}
+
 
 #cancelModal {
   background: #ccc;
@@ -149,6 +170,25 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
+@keyframes fadeBlur {
+  from {
+    opacity: 0;
+    filter: blur(8px);
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+
+.modal-content {
+  animation: fadeBlur 0.5s ease forwards;
+}
+
+
 </style>
 
 <script>
